Create recipes directory and a recipe page
add two links to enable mutual navigation
between the index page and the recipe page

--- a/recipes/braised-pork-belly.html
+++ b/recipes/braised-pork-belly.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Braised pork belly</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-
-    <a href="./recipes/braised-pork-belly.html">Braised pork belly</a>
+    <h1>Braised pork belly</h1>
+    
+    <a href="../index.html">Home</a>
 </body>
 </html>
