feat: Add recipe page content
- Added a free image of the finished dish under the H1 heading.
- Included a "Description" heading followed by one or two paragraphs
describing the recipe.
- Added an "Ingredients" heading with an unordered list of ingredients.
- Added a "Steps" heading with an ordered list of the steps needed for
the dish.

--- a/recipes/braised-pork-belly.html
+++ b/recipes/braised-pork-belly.html
@@ -7,7 +7,35 @@
 </head>
 <body>
     <h1>Braised pork belly</h1>
-    
+    <img src="../recipe-images/braised-pork-belly.jpeg" alt="recipe logo">
+    <h2>Description</h2>
+    <p>Braised pork belly is a popular dish, particularly in Chinese cuisine, known for its tender, melt-in-your-mouth texture and rich, savory-sweet flavor[1][2]. The preparation typically involves slow-cooking thick slabs of pork belly until they are fork-tender[1].</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Pork Belly (with skin on)</li>
+        <li>Sugar (rock sugar or brown sugar)</li>
+        <li>Ginger</li>
+        <li>Garlic</li>
+        <li>Star Anise</li>
+        <li>Bay Leaves</li>
+        <li>Cinnamon Stick</li>
+        <li>Soy Sauce (light and dark)</li>
+        <li>Chinese Cooking Wine (e.g., Shaoxing wine)</li>
+        <li>Water or Broth</li>
+        <li>Cooking Oil</li>
+        <li>Optional: Dried chili peppers, green onions, Szechuan peppercorns, five-spice powder, fried onions, beer, honey.</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><strong>Prepare the Pork Belly:</strong> Cut the pork belly into thick, uniform pieces. Blanch the pork belly in boiling water for a few minutes to remove impurities and blood. Drain and rinse the pork belly.</li>
+        <li><strong>Sear or Caramelize the Pork:</strong> Heat cooking oil in a wok or heavy-bottomed pot. Sear the pork belly pieces on all sides until golden brown. Alternatively, some recipes involve caramelizing sugar in the pot first, then adding the pork to coat it in the caramelized sugar.</li>
+        <li><strong>Add Aromatics and Spices:</strong> Add chopped ginger, garlic, star anise, cinnamon stick, bay leaves, and any other desired spices to the pot. Sauté for a minute until fragrant.</li>
+        <li><strong>Add Liquids and Seasonings:</strong> Pour in the soy sauce, Chinese cooking wine, and water or broth. Ensure the liquid mostly covers the pork belly. Add sugar and stir to dissolve.</li>
+        <li><strong>Braise the Pork:</strong> Bring the liquid to a boil, then reduce the heat to low, cover the pot, and simmer for at least 1.5 to 2 hours, or until the pork belly is very tender and can be easily pierced with a fork. Stir occasionally.</li>
+        <li><strong>Reduce the Sauce:</strong> Once the pork is tender, remove the lid and increase the heat slightly. Let the sauce simmer and reduce until it thickens and coats the pork belly.</li>
+        <li><strong>Rest and Serve:</strong> Allow the braised pork belly to rest for a few minutes before slicing or serving. It is often served with its rich braising sauce.</li>
+    </ol>
     <a href="../index.html">Home</a>
 </body>
 </html>
