feat:Add new home-style Chinese recipe pages
-Create the "Mapo tofu"recipe page
-Create the "Scrambled eggs with tomatoes"recipe page
-Updated the index page('index.html')to include links to these
new recipes in an unordered list better organization

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/braised-pork-belly.html">Braised pork belly</a>
+    <ui>
+        <li><a href="./recipes/braised-pork-belly.html">Braised pork belly</a></li>
+        <li><a href="./recipes/mapo-tofu.html">Mapo-tofu</a></li>
+        <li><a href="./recipes/scrambled-eggs-with-tomatoes.html">Scrambled eggs with tomatoes</a></li>
+    </ui>
 </body>
 </html>
