feat:Add index page's css and recipes css

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
-    <h1>Odin Recipes</h1>
+    <div class="container">
+        <h1>Odin Recipes</h1>
 
-    <ui>
-        <li><a href="./recipes/braised-pork-belly.html">Braised pork belly</a></li>
-        <li><a href="./recipes/mapo-tofu.html">Mapo-tofu</a></li>
-        <li><a href="./recipes/scrambled-eggs-with-tomatoes.html">Scrambled eggs with tomatoes</a></li>
-    </ui>
+        <div class="recipes">
+            <ui>
+                <li><a href="./recipes/braised-pork-belly.html">Braised pork belly</a></li>
+                <li><a href="./recipes/mapo-tofu.html">Mapo-tofu</a></li>
+                <li><a href="./recipes/scrambled-eggs-with-tomatoes.html">Scrambled eggs with tomatoes</a></li>
+            </ui>  
+        </div>
+    </div>
+
 </body>
 </html>
