--- a/recipes/braised-pork-belly.html
+++ b/recipes/braised-pork-belly.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Braised pork belly</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>Braised pork belly</h1>
     <img src="../recipe-images/braised-pork-belly.jpeg" alt="recipe logo">
