--- a/recipes/mapo-tofu.html
+++ b/recipes/mapo-tofu.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mapo-tofu</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>Mapo-tofu</h1>
     <img src="../recipe-images/mapo-tofu.jpg" alt="mapo-dofu jpg">
