--- a/recipes/scrambled-eggs-with-tomatoes.html
+++ b/recipes/scrambled-eggs-with-tomatoes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scrambled eggs with tomatoes</title>
 </head>
+<link rel="stylesheet" href="style.css">
 <body>
     <h1>Scrambled eggs with tomatoes</h1>
     <img src="../recipe-images/scrambled-eggs-with-tomatoes.jpg">
